--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 /*Large Background Image*/
 html {
-    background: url(../img/bkgd2.jpg) no-repeat center center fixed;
+    background: url(../img/bkgd3.jpg) no-repeat right bottom fixed;
     background-size: cover;
     height: 100%;
    /* set height to 100% - these are important for allowing content to vertically align */
@@ -112,7 +112,6 @@ body {
     /* set the display to flex and use the justify-content & align-items properties to center all child elements on the page */
     display: flex;
     justify-content: center;
-    align-items: center;
     margin: 0;
     height: 100%;
     width: 100%;
@@ -122,9 +121,8 @@ body {
     /* set the display to flex and use the justify-content & align-items properties to center the text within the div*/
     display: flex;
     justify-content: center;
-    align-items: center;
     background: #222;
-    background:rgba(0,0,0,0.7);
+    background: #db7093;
     color: #fff;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 300;
@@ -132,16 +130,14 @@ body {
     line-height: 1.5em;
     border-radius: 10px;
     padding: 0px 30px;
-    width: 300px;
-    height: 300px;
+    width: 450px;
+    height: 225px;
+    text-align: center;
 }
 
 #content p span {
-    font-family: 'Lora', sans-serif;
+    font-family: 'Seaweed Script', cursive;
 }
-
-
-
 
 
 /* ==========================================================================
